[project]
name = "picadsb-multiplexer"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "picadsb.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
